# matrix-webhook-bridge

./: .editorconfig  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  MATRIX.md  README.md  bridge.yml.example  config.yml.example  dev_serve.py  docker-compose.override.yml  docker-compose.yml  install.sh  pyproject.toml  tbump.toml
.claude/: settings.local.json
.claude/hooks/: post-tool-use-actionlint.sh  post-tool-use-markdownlint.sh  post-tool-use-ruff.sh  post-tool-use-shfmt.sh
.github/: copilot-instructions.md  release.yml
.github/workflows/: label_validation.yml  main.yml  publish_release.yml  pull_request.yml  pull_request_size.yml  self_assign.yml
integrations/alertmanager-test/: README.md  alertmanager-test.py  alertmanager-test.service  alertmanager-test.timer
integrations/borgmatic/: README.md  notify.py
integrations/crowdsec/: README.md  crowdsec-decisions.service  crowdsec-decisions.timer  notify-decisions.py
integrations/crowdsec-summary/: notify-summary.py
matrix_webhook_bridge/: cli.py  config.py  config_loader.py  log.py  matrix.py  server.py
matrix_webhook_bridge/formatters/: __init__.py  alertmanager.py  diun.py
tests/: test_alertmanager_formatter.py  test_autojoin.py  test_body_size_limit.py  test_config_loader.py  test_formatter_diun.py  test_healthy_matrix.py  test_matrix.py  test_pre_flight_check.py  test_server.py  test_user_validation.py  test_webhook_auth.py  test_webhook_secret_resolution.py
(+1 files in other folders)
