[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matrix-webhook-bridge"
version = "0.1.2"
description = "A webhook-to-Matrix notification bridge with per-sender bot users"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
matrix-webhook-bridge = "matrix_webhook_bridge.cli:main"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
